# cs354r-project2

./: #cleandir.sh#  .gitignore  AI.cpp  AI.h  BaseApplication.cpp  BaseApplication.h  BattingSimulator.cpp  BattingSimulator.h  GUI_INSTALL.txt  GUI_INSTALL.txt~  GameObject.cpp  GameObject.h  Makefile  Makefile.am  Makefile.in  NetManager.h  ProjectReport.md  README.md  SGUI.cpp  SGUI.h  SGUI.tgz  SGUI_Manual.txt  UserManual.md  buildit  cleandir.sh  config.h  config.status  configure  configure.ac  libtool  makeit  resources.cfg  resources.cfg~  untitled  updateGuide
.deps/: BattingSimulator-BaseApplication.Po  BattingSimulator-BattingSimulator.Po  BattingSimulator-GUI.Po
SGUI/: SGUI.cpp  SGUI.h  SGUISetupII.txt
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
resource/gui/: scorer.layout~
resource/materials/scripts/: Bat.material
resource/meshes/: bat.mesh  bat.mesh.xml
resource/particle/: Sun.particle
