AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(BattingSimulator, 0.1)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2 OGRE-Terrain >= 1.7.1])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(bullet, [bullet >= 2.79])
AC_SUBST(BULLET_CFLAGS)
AC_SUBST(BULLET_LIBS)

PKG_CHECK_MODULES([SDL], [sdl >= 1.2])
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

PKG_CHECK_MODULES(CEGUI, [CEGUI-0 >= 0.8])
AC_SUBST(CEGUI_CFLAGS)
AC_SUBST(CEGUI_LIBS)

PKG_CHECK_MODULES(CEGUI_OGRE, [CEGUI-0-OGRE >= 0.7])
AC_SUBST(CEGUI_OGRE_CFLAGS)
AC_SUBST(CEGUI_OGRE_LIBS)

PKG_CHECK_MODULES([SDL_MIXER], [SDL_mixer])
AC_SUBST(SDL_MIXER_CFLAGS)
AC_SUBST(SDL_MIXER_LIBS)

PKG_CHECK_MODULES([SDL_NET], [SDL_net])
AC_SUBST(SDL_NET_CFLAGS)
AC_SUBST(SDL_NET_LIBS)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
